<resources>
    <string name="app_name">LabsCM20181</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_bebidas">Bebidas</string>
    <string name="editText_bebidas_nombre">Nombre</string>
    <string name="button_bebidas_foto">Foto</string>
    <string name="editText_bebidas_ingredientes">Ingredientes</string>
    <string name="editText_bebidas_precio">Precio</string>
    <string name="button_bebidas_guardar">Guardar</string>
    <string name="button_platos">Platos</string>
    <string name="editText_platos_nombre">Nombre</string>
    <string name="editText_platos_tiempo">Tiempo de Cocción</string>
    <string name="button_platos_foto">Foto</string>
    <string name="platos_horario">Horario</string>
    <string name="checkButton_platos_mañana">Mañana</string>
    <string name="checkButton_platos_tarde">Tarde</string>
    <string name="checkButton_platos_noche">Noche</string>
    <string name="radioButton_paltos_platoFuerte">Plato Fuerte</string>
    <string name="radioButton_paltos_entrada">Entrada</string>
    <string name="editText_platos_precio">Precio</string>
    <string name="editText_platos_ingredientes">Ingredientes</string>
    <string name="button_platos_guardar">Guardar</string>
    <string name="overFlowMenu_limpiar">Limpiar</string>
    <string name="overFlowMenu_salir">Salir</string>
    <string name="overFlowMenu_cambiarIdioma">Cambiar Idioma</string>
    <string name="bebidas">Bebidas</string>
    <string name="platos">Platos</string>
    <string name="perfil">Perfil</string>
    <string name="acerca">Acerca De</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_configuraciones">ConfiguracionesActivity</string>
    <string name="title_activity_contenido">ContenidoActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_agregar_bebidas">AgregarBebidasActivity</string>
</resources>
