<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/perfil" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_acerca"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/acerca" />
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
